Initial commit: Series Tracker app with authentication and series management

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,64 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+    <ion-title>Add Series</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Add Series</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <form (ngSubmit)="onSubmit()" class="ion-padding">
+    <ion-item>
+      <ion-label position="stacked">Title</ion-label>
+      <ion-input type="text" [(ngModel)]="newSeries.title" name="title" required></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="stacked">Platform</ion-label>
+      <ion-select [(ngModel)]="newSeries.platform" name="platform" required>
+        <ion-select-option *ngFor="let platform of platforms" [value]="platform">
+          {{ platform }}
+        </ion-select-option>
+      </ion-select>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="stacked">Total Episodes</ion-label>
+      <ion-input type="number" [(ngModel)]="newSeries.totalEpisodes" name="totalEpisodes" required min="1"></ion-input>
+    </ion-item>
+
+    <!-- Image upload section -->
+    <ion-item lines="none" class="ion-margin-bottom">
+      <ion-label position="stacked">Series Image</ion-label>
+      <div class="image-upload-container">
+        <div class="image-preview" *ngIf="imagePreview">
+          <img [src]="imagePreview" alt="Series preview">
+        </div>
+        <ion-button expand="block" (click)="uploadImage()" class="upload-button">
+          <ion-icon slot="start" name="image"></ion-icon>
+          {{ imagePreview ? 'Change Image' : 'Upload Image' }}
+        </ion-button>
+        <input
+          #fileInput
+          type="file"
+          accept="image/*"
+          (change)="onFileSelected($event)"
+          style="display: none"
+        >
+      </div>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="stacked">Image URL (optional)</ion-label>
+      <ion-input type="url" [(ngModel)]="newSeries.imageUrl" name="imageUrl"></ion-input>
+    </ion-item>
+
+    <ion-button expand="block" type="submit" class="ion-margin-top" [disabled]="!isFormValid()">
+      Add Series
+    </ion-button>
+  </form>
 </ion-content>
