--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,51 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      My Series
     </ion-title>
+    <ion-buttons slot="end">
+      <ion-button routerLink="/tabs/tab2">
+        <ion-icon slot="icon-only" name="add-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <!-- Debug info -->
+  <div *ngIf="series">
+    <p>Number of series: {{series.length}}</p>
+  </div>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" size-sm="6" size-md="4" size-lg="3" *ngFor="let item of series">
+        <ion-card>
+          <ion-img [src]="item.imageUrl || 'assets/placeholder-series.jpg'"></ion-img>
+          <ion-card-header>
+            <ion-card-title>{{ item.title }}</ion-card-title>
+            <ion-card-subtitle>{{ item.platform }}</ion-card-subtitle>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-progress-bar [value]="item.watchedEpisodes / item.totalEpisodes"></ion-progress-bar>
+            <div class="progress-text">
+              Episode {{ item.watchedEpisodes }}/{{ item.totalEpisodes }}
+            </div>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <!-- Empty state message -->
+  <div class="empty-state" *ngIf="series.length === 0">
+    <ion-text color="medium">
+      <h2>No series added yet</h2>
+      <p>Start tracking your favorite series by clicking the + button above</p>
+    </ion-text>
+  </div>
 </ion-content>
