--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -31,6 +31,16 @@
       <ion-input type="number" [(ngModel)]="newSeries.totalEpisodes" name="totalEpisodes" required min="1"></ion-input>
     </ion-item>
 
+    <ion-item>
+      <ion-label position="stacked">Watched Episodes</ion-label>
+      <ion-input type="number" [(ngModel)]="newSeries.watchedEpisodes" name="watchedEpisodes" required min="1"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="stacked">Notes</ion-label>
+      <ion-input type="text" [(ngModel)]="newSeries.notes" name="notes"></ion-input>
+    </ion-item>
+
     <!-- Image upload section -->
     <ion-item lines="none" class="ion-margin-bottom">
       <ion-label position="stacked">Series Image</ion-label>
@@ -52,10 +62,6 @@
       </div>
     </ion-item>
 
-    <ion-item>
-      <ion-label position="stacked">Image URL (optional)</ion-label>
-      <ion-input type="url" [(ngModel)]="newSeries.imageUrl" name="imageUrl"></ion-input>
-    </ion-item>
 
     <ion-button expand="block" type="submit" class="ion-margin-top" [disabled]="!isFormValid()">
       Add Series
